# OutfitOptimizerBot

./: .replit  Pasted-2024-09-19-17-41-46-085-INFO-SLACK-CHANNEL-C07NJLCDT8Q-2024-09-19-17-41-46-085-INFO-SLACK-B-1726768305890.txt  Pasted-2024-09-19-17-41-46-085-INFO-SLACK-CHANNEL-C07NJLCDT8Q-2024-09-19-17-41-46-085-INFO-SLACK-B-1726768473835.txt  README.md  config.py  last_send.txt  main.py  manifest.yaml  outfit_generator.py  pasted_text_1726623835988.txt  pyproject.toml  scheduler.py  slack_bot.py  weather.py
templates/: outfit_message.txt
