[tool.poetry]
name = "repl-nix-outfitoptimizerbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.46.0"
flask = "^3.0.3"
apscheduler = "^3.10.4"
slack-sdk = "^3.33.0"
requests = "^2.32.3"
jinja2 = "^3.1.4"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
